Revision history for DateTime::Format::Genealogy

0.12
	Use Params::Get
	Use Readonly::Values::Months

0.11	Tue Feb 11 14:05:44 EST 2025
	Handle "from xxx to yyy" as well as the more correct "bet xxx and yyy"
	Added _get_params()

0.10	Sat Feb  1 21:01:54 EST 2025
	Use Test::DescribeMe to simplify tests
	refactor _date_parser_cached
	Added t/30-basics.t
	Handle August in French

0.09	Wed Jul 10 08:53:31 EDT 2024
	Fix https://www.cpantesters.org/cpan/report/a12f8d3a-3d93-11ef-8086-6cc8c30391f4

0.08	Sun Jul  7 20:11:22 EDT 2024
	Handle entries with Juli (unless strict is enabled)
	Handle 29-Aug-1938

0.07	Thu Jun 20 07:29:46 EDT 2024
	Handle entries with Janv (unless strict is enabled)

0.06	Tue Apr 23 08:28:40 EDT 2024
	Handle entries which have the French 'Mai' instead of the English 'May'
	Some messages were printed even in quiet mode
	Handle '1517-05-04' as '04/05/1517'

0.05	Thu Mar  2 09:55:57 EST 2023
	Some people use 4 letters for months - handle them
	Allow more formats to be parsed when not strict
	Old dates (say < AD100) used to return today's date, now rejected
	Strings of just a year returned empty string instead of undef

0.04	Sat Apr  3 20:53:13 EDT 2021
	Warn rather than die on unparseable date
	Trap unparsable dates

0.03	Fri Jun 12 20:25:09 EDT 2020
	Added the quiet flag
	Added the strict flag and allow long month names if not given

0.02	Wed Mar  4 10:48:52 EST 2020
	Added check for invalid parameter (thanks to MANWAR)
		See https://github.com/nigelhorne/DateTime-Format-Genealogy/pull/1
	Fix calling in class mode
	Added many more sanity tests
	Be more lenient with callers

0.01	Tue Apr 10 17:30:46 EDT 2018
        First release